--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@next/font": "^14.2.15",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-google-autocomplete": "^2.7.3",
     "react-icons": "^5.3.0",
