--- a/package.json
+++ b/package.json
@@ -9,26 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^14.2.15",
+    "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-google-autocomplete": "^2.7.3",
+    "react-google-places-autocomplete": "^4.1.0",
     "react-icons": "^5.3.0",
     "react-phone-input-2": "^2.15.1",
+    "react-redux": "^9.1.2",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
+    "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/redux-persist": "^4.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
