--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.6",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
